--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,6 +41,10 @@
     align-items: center;
     min-height: 100vh;
     justify-content: center;
+    font-family:
+      system-ui,
+      -apple-system,
+      sans-serif;
   }
 
   h1 {
