--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 <div class="container">
-  <h1>Home Page</h1>
-  <h2>Site for displaying search engine optimized landing pages</h2>
+  <h1>Astro Lander</h1>
+  <h2>Publish search engine optimized landing pages</h2>
 
   <ul>
     <li><a href="/example">Landing Page Example</a></li>
